@@ -1,3 +1,8 @@
+2011-02-22  6.6.7-9 Glenn Randers-Pehrson <glennrp@image...>
+  * Disabled reduction of grayscale images (color-type 0) to less than 8 bits
+    when writing because this sometimes produced incorrect output (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=18098).
+
 2011-02-22  6.6.7-9 Cristy  <quetzlzacatenango@image...>
   * New version 6.6.7-9.
 
